# vllm-spyre

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yapfignore  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.spyre  README.md  RELEASING.md  _local_env.sh  _local_envs_for_test.sh  foo  format.sh  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.py  sitemap.xml  versions.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  rfc.yml
.github/workflows/: add_label_automerge.yml  amend-pr-title.yml  build-and-publish.yaml  build_and_publish.yaml  build_and_publish_next.yaml  build_docker.yml  build_docs.yml  check_uv_lock.yml  codespell.yml  create-github-release.yml  doc-lint.yml  lint_actions.yml  lint_code.yml  lint_docs.yml  lint_scripts.yml  pre-commit.yml  preview_docs.yml  publish-to-test-pypi.yaml  publish_docs.yml  publish_to_test_pypi.yaml  publish_to_test_pypi_next.yaml  pull_request_template.md  reminder_comment.yml  ruff.yml  stale.yml  test-spyre.yml  test.yml  type_check.yaml  vllm_spyre_next_upstream_tests.yml  yapf.yml
1.10.0/: 404.html  index.html  sitemap.xml
1.10.0/contributing/: architecture.html  index.html
1.10.0/deploying/: docker.html  k8s.html  rhoai.html
1.10.0/getting_started/: installation.html
1.10.0/roadmaps/: q3-2025.html
1.10.0/user_guide/: configuration.html  env_vars.html  supported_features.html  supported_models.html
1.8.0/: 404.html  index.html  sitemap.xml
1.8.0/contributing/: architecture.html  index.html
1.8.0/deploying/: docker.html  k8s.html  rhoai.html
1.8.0/getting_started/: installation.html
1.8.0/roadmaps/: q3-2025.html
1.8.0/user_guide/: configuration.html  env_vars.html  supported_features.html  supported_models.html
1.9.0/: 404.html  index.html  sitemap.xml
1.9.0/contributing/: architecture.html  index.html
1.9.0/deploying/: docker.html  k8s.html  rhoai.html
1.9.0/getting_started/: installation.html
1.9.0/roadmaps/: q3-2025.html
1.9.0/search/: search_index.json
1.9.0/user_guide/: configuration.html  env_vars.html  supported_features.html  supported_models.html
1.9.1/: 404.html  index.html  sitemap.xml
1.9.1/contributing/: architecture.html  index.html
1.9.1/deploying/: docker.html  k8s.html  rhoai.html
1.9.1/getting_started/: installation.html
1.9.1/roadmaps/: q3-2025.html
1.9.1/user_guide/: configuration.html  env_vars.html  supported_features.html  supported_models.html
2.0.0-rc.1/: 404.html  index.html  objects.inv  sitemap.xml
2.0.0-rc.1/contributing/: architecture.html  index.html
2.0.0-rc.1/deploying/: docker.html  k8s.html  rhoai.html
2.0.0-rc.1/getting_started/: installation.html
2.0.0-rc.1/roadmaps/: q3-2025.html
2.0.0-rc.1/user_guide/: configuration.html  env_vars.html  supported_features.html  supported_models.html
2.0.0-rc.2/: 404.html  index.html  sitemap.xml
2.0.0-rc.2/contributing/: architecture.html  index.html
2.0.0-rc.2/deploying/: docker.html  k8s.html  rhoai.html
2.0.0-rc.2/getting_started/: installation.html
2.0.0-rc.2/roadmaps/: q3-2025.html
2.0.0-rc.2/search/: search_index.json
2.0.0-rc.2/user_guide/: configuration.html  env_vars.html  supported_features.html  supported_models.html
2.0.0-rc.3/: 404.html  index.html  sitemap.xml
2.0.0-rc.3/contributing/: architecture.html  index.html  maintaining.html
2.0.0-rc.3/deploying/: docker.html  k8s.html  rhoai.html
2.0.0-rc.3/getting_started/: installation.html
2.0.0-rc.3/roadmaps/: q3-2025.html
2.0.0-rc.3/search/: search_index.json
2.0.0-rc.3/user_guide/: configuration.html  env_vars.html  supported_features.html  supported_models.html
2.0.0-rc.3/vllm_spyre_next/: index.html
contributing/: architecture.html  index.html
contributing/continuous_batching/: overview.html
contributing/multimodal/: adding_new_models.html
deploying/: docker.html  k8s.html  rhoai.html
dev/: 404.html  index.html  sitemap.xml
dev/contributing/: architecture.html  index.html  maintaining.html
dev/deploying/: docker.html  k8s.html  rhoai.html
dev/getting_started/: installation.html
dev/roadmaps/: q3-2025.html
dev/search/: search_index.json
dev/user_guide/: configuration.html  env_vars.html  supported_features.html  supported_models.html
dev/vllm_spyre_next/: index.html
docker/: .senlib.json  Dockerfile  Dockerfile.amd64  simple_vllm_serve.sh
docs/: .nav.yml  README.md  requirements-docs.txt
docs/contributing/: README.md  architecture.md  continuous_batching_api.md  maintaining.md
docs/deploying/: docker.md  k8s.md  rhoai.md
docs/roadmaps/: q3-2025.md
examples/: chnges.py  offline_inference_spyre.ipynb  offline_inference_spyre.py  offline_inference_spyre_cb.py  offline_inference_spyre_cb_test.py  online_inference_spyre.ipynb  online_inference_spyre_multiple.ipynb  spyre_inference_ppc64le.py
getting_started/: installation.html
roadmaps/: q3-2025.html
search/: search_index.json
tests/: conftest.py  download_model_configs.py  expected_prompt_logprobs.json  golden_token_injector.py  hf_cache.json  hf_result_cache.py  llm_cache.py  llm_cache_util.py  llm_cache_utils.py  output_util.py  pytest.ini  scheduling_utils.py  spyre_util.py  test_spyre_basic.py  test_spyre_cb.py  test_spyre_embeddings.py  test_spyre_gptq.py  test_spyre_input_batch.py  test_spyre_max_new_tokens.py  test_spyre_max_prompt_length.py  test_spyre_online.py  test_spyre_online_gptq.py  test_spyre_online_multi.py  test_spyre_seed.py  test_spyre_tensor_parallel.py  test_spyre_warmup_shapes.py
tools/: check_aiu.sh  doc-lint.sh  download_model.py  lint_actions.sh  report_build_time_ninja.py  shellcheck.sh  type_check.sh
user_guide/: configuration.html  env_vars.html  supported_features.html  supported_models.html
vllm_spyre/: __init__.py  compat_utils.py  compilation_utils.py  config_patcher.py  envs.py  perf_metrics.py  platform.py  platform_torch_spyre.py  utils.py
vllm_spyre_next/: RELEASING.md  pyproject.toml
(+360 files in other folders)
